tests/golden/type_errors/collection_helper_method_name_conflict.cd
struct Bag { value: number }

impl Bag {
  fun copy(): number { return this.value; }
}
